# uni

./: .gitignore  404.html  AGENTS.md  Cargo.toml  README.md  benchmark_results.csv  index.html  llms.txt  sitemap.xml
bindings/python/: Cargo.toml  README.md  pyproject.toml  uni.pyi
bindings/python/examples/: fraud_detection.ipynb  generate_notebooks.py  rag.ipynb  recommendation.ipynb  run_notebooks.py  sales_analytics.ipynb  supply_chain.ipynb
bindings/python/src/: lib.rs
bindings/python/tests/: test_advanced.py  test_basic.py  test_builder.py  test_bulk_writer.py  test_cypher_features.py  test_schema_builder.py  test_sessions.py  test_vector_search.py
bindings/python/tests/use_cases/: algo_showcase.py  demo01_semantic_scholar.py  test_all_use_cases.py
bindings/python/uni-pydantic/: DESIGN.md  README.md  pyproject.toml
bindings/python/uni-pydantic/examples/: demo.py  generate_notebooks.py  supply_chain.ipynb
bindings/python/uni-pydantic/src/uni_pydantic/: __init__.py  base.py  exceptions.py  fields.py  hooks.py  query.py  schema.py  session.py  types.py
bindings/python/uni-pydantic/tests/: __init__.py  conftest.py  test_integration.py  test_models.py  test_queries.py  test_relationships.py  test_schema_sync.py  test_types.py
crates/uni/: Cargo.toml  README.md
crates/uni-algo/: Cargo.toml
crates/uni-algo/src/: lib.rs
crates/uni-algo/src/algo/: id_map.rs  mod.rs  procedure_template.rs  procedures.rs  projection.rs  test_utils.rs  traversal.rs
crates/uni-algo/src/algo/algorithms/: all_simple_paths.rs  apsp.rs  articulation_points.rs  astar.rs  bellman_ford.rs  (+31 more)
crates/uni-cli/: Cargo.toml
crates/uni-cli/src/: main.rs  repl.rs
crates/uni-cli/src/demo/: mod.rs  semantic_scholar.rs
crates/uni-common/: Cargo.toml
crates/uni-common/src/: config.rs  lib.rs  sync.rs
crates/uni-common/src/api/: error.rs
crates/uni-common/src/core/: id.rs  schema.rs  snapshot.rs
crates/uni-common/src/graph/: simple_graph.rs
crates/uni-crdt/: Cargo.toml
crates/uni-crdt/src/: gcounter.rs  gset.rs  lib.rs  lww_map.rs  lww_register.rs  orset.rs  rga.rs  vc_register.rs  vector_clock.rs
crates/uni-query/: Cargo.toml
crates/uni-query/src/: lib.rs  types.rs
crates/uni-query/src/query/: ast.rs  datetime.rs  expr.rs  expr_eval.rs  mod.rs  parser.rs  planner.rs  pushdown.rs  subsumption.rs
crates/uni-query/tests/: datetime_functions_test.rs  ddl_parser_test.rs  executor_edge_cases.rs  functions_test.rs  json_fts_integration.rs  parser_edge_cases.rs  parser_test.rs  planner_edge_cases.rs  property_tests.rs  pushdown_test.rs  recursive_cte_parser_test.rs  reduce_parser_test.rs  window_parser_test.rs
crates/uni-server/: Cargo.toml
crates/uni-server/src/: lib.rs
crates/uni-server/src/server/: mod.rs
crates/uni-store/: Cargo.toml
crates/uni-store/src/: cloud.rs  compaction.rs  lib.rs  store_utils.rs
crates/uni-store/src/embedding/: mod.rs  service.rs
crates/uni-store/src/runtime/: context.rs  id_allocator.rs  l0.rs  l0_manager.rs  l0_visibility.rs  mod.rs  property_manager.rs  wal.rs  working_graph.rs  writer.rs
crates/uni-store/src/snapshot/: manager.rs
crates/uni-store/src/storage/: adjacency.rs  adjacency_cache.rs  arrow_convert.rs  compaction.rs  csr.rs  delta.rs  edge.rs  index.rs  index_manager.rs  index_rebuild.rs  inverted_index.rs  json_index.rs  manager.rs  mod.rs  property_builder.rs  resilient_store.rs  value_codec.rs  vertex.rs
crates/uni-store/tests/: background_compaction_test.rs  cloud_integration_test.rs  crdt_vc_integration.rs  property_tests.rs  s3_compatibility_test.rs  snapshot_manager_test.rs  storage_layer_test.rs  wal_durability_test.rs
crates/uni/benches/: algo_benchmarks.rs  comprehensive.rs  micro_benchmarks.rs
crates/uni/src/: lib.rs
crates/uni/src/api/: algo.rs  builder.rs  bulk.rs  impl_query.rs  mod.rs  query_builder.rs  schema.rs  session.rs  sync.rs  transaction.rs  vector.rs
crates/uni/tests/: adjacency_cache_edge_cases.rs  adjacency_cache_test.rs  admin_features_test.rs  algo_edge_cases.rs  algo_integration.rs  api_comprehensive.rs  api_integration.rs  api_sync_test.rs  auto_flush_test.rs  backup_test.rs  bug_traversal_filtering.rs  bulk_loading_test.rs  case_test.rs  collection_types_test.rs  compaction_edge_cases.rs  compaction_granular_test.rs  compaction_test.rs  composite_index_test.rs  constraint_enforcement_test.rs  crdt_merge_on_write_test.rs  cypher_aggregation.rs  cypher_call.rs  cypher_clauses_ext.rs  cypher_copy.rs  cypher_create.rs  cypher_delete.rs  cypher_exists.rs  cypher_filtering.rs  cypher_gaps.rs  cypher_limit_order.rs  cypher_list_comprehension.rs  cypher_merge.rs  cypher_merge_actions.rs  cypher_optional.rs  cypher_pushdown.rs  cypher_reduce.rs  cypher_remove.rs  cypher_set_advanced.rs  cypher_shortest_path.rs  cypher_subquery_parser.rs  (+80 more)
website/: README.md  mkdocs.yml  pyproject.toml  update_parser.py
website/docs/: index.md
website/docs/concepts/: architecture.md  concurrency.md  crdt-types.md  data-model.md  identity.md  index.md  indexing.md
website/docs/examples/: index.md
website/docs/examples/pydantic/: fraud_detection.ipynb  rag.ipynb  recommendation.ipynb  sales_analytics.ipynb
website/docs/examples/python/: fraud_detection.ipynb  rag.ipynb  recommendation.ipynb  sales_analytics.ipynb  supply_chain.ipynb
website/docs/examples/rust/: fraud_detection.ipynb  rag.ipynb  sales_analytics.ipynb
website/docs/getting-started/: cli-reference.md  index.md  installation.md  programming-guide.md  quickstart.md
website/docs/guides/: cypher-querying.md  data-ingestion.md  index.md  performance-tuning.md  pydantic-ogm.md  schema-design.md  vector-search.md
website/docs/internals/: api-gap-plan.md  benchmarks.md  index.md  mutation_spec.md  query-planning.md  storage-engine.md  vectorized-execution.md
website/docs/reference/: configuration.md  glossary.md  index.md  limitations.md  pydantic-ogm.md  python-api.md  rest-api.md  rust-api.md  troubleshooting.md
website/docs/use-cases/: fraud-detection.md  index.md  rag-knowledge-graph.md  recommendation-engine.md  supply-chain.md
(+110 files in other folders)
