[workspace]
members = [
    "crates/uni-common",
    "crates/uni-store",
    "crates/uni-algo",
    "crates/uni-query",
    "crates/uni-server",
    "crates/uni-cli",
    "crates/uni",
    "crates/uni-crdt",
    "bindings/python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Dragonscale Industries Inc. <dev@dragonscale.ai>"]
license = "Apache-2.0"
repository = "https://github.com/rustic-ai/uni"
homepage = "https://www.rustic.ai"
documentation = "https://rustic-ai.github.io/uni"
keywords = ["graph", "database", "cypher", "vector", "embedded"]
categories = ["database", "data-structures"]

[workspace.dependencies]
uni-common = { path = "crates/uni-common" }
uni-store = { path = "crates/uni-store" }
uni-algo = { path = "crates/uni-algo" }
uni-query = { path = "crates/uni-query" }
uni-server = { path = "crates/uni-server" }
uni-cli = { path = "crates/uni-cli" }
uni = { path = "crates/uni" }
uni-crdt = { path = "crates/uni-crdt" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
arrow = { version = "52.2.0", features = ["prettyprint"] }
arrow-array = "52.2.0"
arrow-schema = "52.2.0"
arrow-cast = "52.2.0"
lance = "0.19.1"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
object_store = "0.11"
tempfile = "3.10"
uuid = { version = "1.8", features = ["v4"] }
chrono = "=0.4.39"
itertools = "0.12"
fxhash = "0.2"
smallvec = "1.11"
bytes = "1.6"
parking_lot = "0.12"
fastembed = { version = "5.6.0", default-features = false, features = ["ort-download-binaries", "hf-hub-native-tls"] }
# ort = { version = "=2.0.0-rc.9" }
rand = "0.8"
ordered-float = "4.2"
rayon = "1.10"
csv = "1.3"
parquet = "52.2.0"
regex = "1.10"
lazy_static = "1.4"
async-recursion = "1.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
rustyline = "13.0"
colored = "2.1"
prettytable-rs = "0.10"
criterion = "0.5"
url = "2.5"
proptest = "1.4"