[tool.poetry]
name = "uni-docs"
version = "0.1.0"
description = "Documentation site for Uni - The Embedded Multi-Model Graph Database"
authors = ["Dragonscale Industries Inc. <dev@dragonscale.ai>"]
readme = "README.md"
package-mode = false
homepage = "https://www.rustic.ai"
repository = "https://github.com/rustic-ai/uni"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6"
mkdocs-material = "^9.5"
pymdown-extensions = "^10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
