[package]
name = "uni-cli"
description = "Command-line interface for Uni graph database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "uni"
path = "src/main.rs"

[dependencies]
uni = { workspace = true }
uni-common = { workspace = true }
uni-store = { workspace = true }
uni-server = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
colored = { workspace = true }
prettytable-rs = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde_json = { workspace = true }