[package]
name = "uni-crdt"
description = "Conflict-free Replicated Data Types for Uni graph database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
rmp-serde = "1.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
fxhash = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = "1.4"
