[package]
name = "uni-store"
description = "Storage layer for Uni graph database - Lance datasets, LSM deltas, and WAL"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uni-common = { workspace = true }
uni-crdt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
smallvec = { workspace = true }
fxhash = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
dashmap = "6.0"
lru = "0.16"
metrics = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
lance = { workspace = true }
lance-index = { version = "0.19.1" }
lance-linalg = { version = "0.19.1" }
fastembed = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
tokio-test = "0.4"